--- a/FavouritePlaces/Info.plist
+++ b/FavouritePlaces/Info.plist
@@ -11,7 +11,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>Favourite places</string>
+	<key>CFBundleDisplayName</key>
+	<string>Favourite places</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
@@ -20,6 +22,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<string></string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>$(PRODUCT_NAME) requires your location to show places</string>
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) requires your camera to take photos</string>
 	<key>UIApplicationSceneManifest</key>
