--- a/FavouritePlaces/Info.plist
+++ b/FavouritePlaces/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Favourite places</string>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleDisplayName</key>
 	<string>Favourite places</string>
 	<key>CFBundlePackageType</key>
