--- a/FavouritePlaces/Info.plist
+++ b/FavouritePlaces/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>Favourite places</string>
 	<key>CFBundleDisplayName</key>
 	<string>Favourite places</string>
 	<key>CFBundlePackageType</key>
@@ -22,7 +22,7 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<string></string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>$(PRODUCT_NAME) requires your location to show places</string>
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) requires your camera to take photos</string>
